--- a/web/index.html
+++ b/web/index.html
@@ -7,20 +7,16 @@
       Fore more details: * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
     -->
     <base href="/">
-
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="description" content="Tendon Loader - WebApp">
-
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Tendon Loader">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png"/>
-
     <title>tendon_loader</title>
     <link rel="manifest" href="manifest.json">
 </head>
@@ -31,26 +27,13 @@
         navigator.serviceWorker.register('flutter_service_worker.js');
       });
     }
-
-
 </script>
-
+<script defer src="/__/firebase/init.js?useEmulator=true"></script>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
-<!--<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase/init.js"></script> &lt;!&ndash; 8.3.0 &ndash;&gt;-->
-
 <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-storage.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script> <!-- 7.20.0 -->
-
-<!--
-<script src="/__/firebase/init.js"></script>  8.3.0
-<script src="/__/firebase/8.4.1/firebase-app.js"></script>
-<script src="/__/firebase/8.4.1/firebase-auth.js"></script>
-<script src="/__/firebase/8.4.1/firebase-storage.js"></script>
-<script src="/__/firebase/8.4.1/firebase-firestore.js"></script>  7.20.0
--->
-
 <script>
     // Your web app's Firebase configuration
     const firebaseConfig = {
@@ -62,12 +45,9 @@
       messagingSenderId: "534221336745",
       appId: "1:534221336745:web:8893c7f4e44b9e959639b8"
     };
-
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
-
 </script>
-
 <!-- Initialize App -->
 <script src="main.dart.js" type="application/javascript"></script>
 </body>
