--- a/web/index.html
+++ b/web/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!--
-      If you are serving your web app in a path other than the root, change the href value below to reflect the base path you are serving from.
-      The path provided below has to start and end with a slash "/" in order for it to work correctly.
-      Fore more details: * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-    -->
     <base href="/">
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="Tendon Loader - WebApp">
+    <meta name="description" content="Tendon Loader">
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Tendon Loader">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png"/>
+    <link rel="icon" type="image/png" href="favicon.ico"/>
     <title>tendon_loader</title>
     <link rel="manifest" href="manifest.json">
 </head>
@@ -27,13 +22,19 @@
         navigator.serviceWorker.register('flutter_service_worker.js');
       });
     }
+
 </script>
-<script defer src="/__/firebase/init.js?useEmulator=true"></script>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
+<!--<script src="/__/firebase/8.4.1/firebase-app.js?useEmulator=true"></script>-->
+<!--<script src="/__/firebase/8.4.1/firebase-auth.js?useEmulator=true"></script>-->
+<!--<script src="/__/firebase/8.4.1/firebase-storage.js?useEmulator=true"></script>-->
+<!--<script src="/__/firebase/7.20.0/firebase-firestore.js?useEmulator=true"></script>-->
+
 <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-storage.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script> <!-- 7.20.0 -->
+<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
+
 <script>
     // Your web app's Firebase configuration
     const firebaseConfig = {
@@ -47,6 +48,7 @@
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
+
 </script>
 <!-- Initialize App -->
 <script src="main.dart.js" type="application/javascript"></script>
