--- a/web/index.html
+++ b/web/index.html
@@ -22,35 +22,21 @@
         navigator.serviceWorker.register('flutter_service_worker.js');
       });
     }
-
 </script>
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<!--<script src="/__/firebase/8.4.1/firebase-app.js?useEmulator=true"></script>-->
-<!--<script src="/__/firebase/8.4.1/firebase-auth.js?useEmulator=true"></script>-->
-<!--<script src="/__/firebase/8.4.1/firebase-storage.js?useEmulator=true"></script>-->
-<!--<script src="/__/firebase/7.20.0/firebase-firestore.js?useEmulator=true"></script>-->
-
 <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-storage.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
-
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
 <script>
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyDDyoyhwZtACT9Y6yzeNFl1Ch6mU1SZ-pc",
-      authDomain: "tendon-loader.firebaseapp.com",
-      databaseURL: "https://tendon-loader-default-rtdb.firebaseio.com",
+    firebase.initializeApp({
       projectId: "tendon-loader",
-      storageBucket: "tendon-loader.appspot.com",
       messagingSenderId: "534221336745",
-      appId: "1:534221336745:web:8893c7f4e44b9e959639b8"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-
+      storageBucket: "tendon-loader.appspot.com",
+      authDomain: "tendon-loader.firebaseapp.com",
+      apiKey: "AIzaSyDDyoyhwZtACT9Y6yzeNFl1Ch6mU1SZ-pc",
+      appId: "1:534221336745:web:8893c7f4e44b9e959639b8",
+      databaseURL: "https://tendon-loader-default-rtdb.firebaseio.com",
+    });
 </script>
-<!-- Initialize App -->
 <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
