--- a/web/index.html
+++ b/web/index.html
@@ -17,18 +17,29 @@
   <link rel="manifest" href="manifest.json">
 </head>
 
-<body>
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js');
-      });
-    }
+<body style="background-color: black; background-image: url('app_logo.svg'); background-size: 100vw 100vh;">
+  <script>if ('serviceWorker' in navigator) window.addEventListener('flutter-first-frame', () => navigator.serviceWorker.register('flutter_service_worker.js'));</script>
+
+  <script src="/__/firebase/8.5.0/firebase-app.js"></script>
+  <script src="/__/firebase/8.5.0/firebase-auth.js"></script>
+  <script src="/__/firebase/8.5.0/firebase-firestore.js"></script>
+  <script src="/__/firebase/init.js"></script>
+
+  <!-- 
+  <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-firestore.js"></script>
+  <script type="text/javascript">
+    firebase.initializeApp({
+      projectId: "tendon-loader",
+      messagingSenderId: "534221336745",
+      authDomain: "tendon-loader.web.com",
+      storageBucket: "tendon-loader.appspot.com",
+      apiKey: "AIzaSyDDyoyhwZtACT9Y6yzeNFl1Ch6mU1SZ-pc",
+      appId: "1:534221336745:web:8893c7f4e44b9e959639b8",
+    });
   </script>
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
-  <script src="init.js" type="text/javascript"></script>
+  -->
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 
