--- a/web/index.html
+++ b/web/index.html
@@ -20,12 +20,12 @@
 <body style="background-image: url('icons/icon-universal.svg'); background-size: 100vw 100vh;">
   <script>if ('serviceWorker' in navigator) window.addEventListener('flutter-first-frame', () => navigator.serviceWorker.register('flutter_service_worker.js'));</script>
 
-  <!-- <script src="/__/firebase/8.6.1/firebase-app.js"></script>
+  <script src="/__/firebase/8.6.1/firebase-app.js"></script>
   <script src="/__/firebase/8.6.1/firebase-auth.js"></script>
   <script src="/__/firebase/8.6.1/firebase-firestore.js"></script>
   <script src="/__/firebase/init.js"></script>
-   -->
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  
+  <!-- <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
   <script type="text/javascript">
@@ -37,7 +37,7 @@
       apiKey: "AIzaSyDDyoyhwZtACT9Y6yzeNFl1Ch6mU1SZ-pc",
       appId: "1:534221336745:web:8893c7f4e44b9e959639b8",
     });
-  </script>
+  </script> -->
 
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
