--- a/web/index.html
+++ b/web/index.html
@@ -71,7 +71,7 @@
   <script defer src="/__/firebase/8.6.1/firebase-analytics.js"></script>
   <script defer src="/__/firebase/init.js"></script>
 
-  <!-- <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
@@ -88,7 +88,7 @@
       databaseURL: "https://tendon-loader-default-rtdb.firebaseio.com",
     });
     firebase.analytics();
-  </script> -->
+  </script>
 </body>
 
 </html>
