--- a/web/index.html
+++ b/web/index.html
@@ -3,35 +3,50 @@
 
 <head>
   <base href="/">
+
   <meta charset="UTF-8">
-  <title>Tendon Loader</title>
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Tendon Loader">
+  <meta name="description" content="A new Flutter project.">
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Tendon Loader">
+  <meta name="apple-mobile-web-app-title" content="tendon_loader">
   <link rel="apple-touch-icon" href="icons/icon-universal.svg">
+  <title>Tendon Loader</title>
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.ico" />
   <link rel="manifest" href="manifest.json">
+  <!-- Static background -->
+  <style>
+    body {
+      background-image: url('icons/icon-universal.svg');
+      background-size: 100vw 100vh;
+    }
+  </style>
 </head>
 
-<body style="background-image: url('icons/icon-universal.svg'); background-size: 100vw 100vh;">
+<body>
   <script>
-    let serviceWorkerVersion = null;
-    let scriptLoaded = false;
+    var serviceWorkerVersion = null;
+    var scriptLoaded = false;
     function loadMainDartJs() {
-      if (scriptLoaded) return;
+      if (scriptLoaded) {
+        return;
+      }
       scriptLoaded = true;
-      let scriptTag = document.createElement('script');
+      var scriptTag = document.createElement('script');
       scriptTag.src = 'main.dart.js';
       scriptTag.type = 'application/javascript';
       document.body.append(scriptTag);
     }
+
     if ('serviceWorker' in navigator) {
+      // Service workers are supported. Use them.
       window.addEventListener('load', function () {
-        let serviceWorkerUrl = 'flutter_service_worker.js?v=' + serviceWorkerVersion;
+        // Wait for registration to finish before dropping the <script> tag.
+        // Otherwise, the browser will load the script multiple times,
+        // potentially different versions.
+        var serviceWorkerUrl = 'flutter_service_worker.js?v=' + serviceWorkerVersion;
         navigator.serviceWorker.register(serviceWorkerUrl)
           .then((reg) => {
             function waitForActivation(serviceWorker) {
@@ -43,24 +58,35 @@
               });
             }
             if (!reg.active && (reg.installing || reg.waiting)) {
+              // No active web worker and we have installed or are installing
+              // one for the first time. Simply wait for it to activate.
               waitForActivation(reg.installing ?? reg.waiting);
             } else if (!reg.active.scriptURL.endsWith(serviceWorkerVersion)) {
+              // When the app updates the serviceWorkerVersion changes, so we
+              // need to ask the service worker to update.
               console.log('New service worker available.');
               reg.update();
               waitForActivation(reg.installing);
             } else {
+              // Existing service worker is still good.
               console.log('Loading app from service worker.');
               loadMainDartJs();
             }
           });
+
+        // If service worker doesn't succeed in a reasonable amount of time,
+        // fallback to plaint <script> tag.
         setTimeout(() => {
           if (!scriptLoaded) {
-            console.warn('Failed to load app from service worker. Falling back to plain <script> tag.');
+            console.warn(
+              'Failed to load app from service worker. Falling back to plain <script> tag.',
+            );
             loadMainDartJs();
           }
         }, 4000);
       });
     } else {
+      // Service workers not supported. Just drop the <script> tag.
       loadMainDartJs();
     }
   </script>
