--- a/web/index.html
+++ b/web/index.html
@@ -90,16 +90,16 @@
       loadMainDartJs();
     }
   </script>
-
+  <!-- 
   <script defer src="/__/firebase/8.6.1/firebase-app.js"></script>
   <script defer src="/__/firebase/8.6.1/firebase-auth.js"></script>
   <script defer src="/__/firebase/8.6.1/firebase-firestore.js"></script>
   <script defer src="/__/firebase/8.6.1/firebase-analytics.js"></script>
 
-  <!-- <script defer src="/__/firebase/init.js?useEmulator=true"></script> -->
+  <script defer src="/__/firebase/init.js?useEmulator=true"></script> -->
 
-  <script defer src="/__/firebase/init.js"></script>
-<!-- 
+  <!-- <script defer src="/__/firebase/init.js"></script> -->
+
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
@@ -117,7 +117,7 @@
       databaseURL: "https://tendon-loader-default-rtdb.firebaseio.com",
     });
     firebase.analytics();
-  </script> -->
+  </script>
 </body>
 
 </html>
