--- a/web/index.html
+++ b/web/index.html
@@ -97,8 +97,8 @@
   <script defer src="/__/firebase/8.6.1/firebase-firestore.js"></script>
   <script defer src="/__/firebase/8.6.1/firebase-analytics.js"></script>
 
-  <script defer src="/__/firebase/init.js"></script>
-  <!-- <script defer src="/__/firebase/init.js?useEmulator=true"></script> -->
+  <!-- <script defer src="/__/firebase/init.js"></script> -->
+  <script defer src="/__/firebase/init.js?useEmulator=true"></script>
   <![endif]>
 
   <![if false]>
