--- a/web/index.html
+++ b/web/index.html
@@ -91,18 +91,14 @@
     }
   </script>
 
-  <![if true]>
   <script defer src="/__/firebase/8.6.1/firebase-app.js"></script>
   <script defer src="/__/firebase/8.6.1/firebase-auth.js"></script>
   <script defer src="/__/firebase/8.6.1/firebase-firestore.js"></script>
   <script defer src="/__/firebase/8.6.1/firebase-analytics.js"></script>
+  <script defer src="/__/firebase/init.js"></script>
+  <!-- <script defer src="/__/firebase/init.js?useEmulator=true"></script> -->
 
-  <!-- <script defer src="/__/firebase/init.js"></script> -->
-  <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-  <![endif]>
-
-  <![if false]>
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
@@ -119,8 +115,7 @@
       databaseURL: "https://tendon-loader-default-rtdb.firebaseio.com",
     });
     firebase.analytics();
-  </script>
-  <![endif]>
+  </script> -->
 </body>
 
 </html>
