--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="tendon_loader">
-  <link rel="apple-touch-icon" href="icons/icon-universal.svg">
+  <link rel="apple-touch-icon" href="assets/images/app_logo.svg">
   <title>Tendon Loader</title>
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.ico" />
@@ -19,7 +19,7 @@
   <!-- Static background -->
   <style>
     body {
-      background-image: url('icons/icon-universal.svg');
+      background-image: url('assets/images/app_logo.svg');
       background-size: 100vw 100vh;
     }
   </style>
@@ -30,16 +30,13 @@
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
     function loadMainDartJs() {
-      if (scriptLoaded) {
-        return;
-      }
+      if (scriptLoaded) return;
       scriptLoaded = true;
       var scriptTag = document.createElement('script');
       scriptTag.src = 'main.dart.js';
       scriptTag.type = 'application/javascript';
       document.body.append(scriptTag);
     }
-
     if ('serviceWorker' in navigator) {
       // Service workers are supported. Use them.
       window.addEventListener('load', function () {
@@ -73,14 +70,11 @@
               loadMainDartJs();
             }
           });
-
         // If service worker doesn't succeed in a reasonable amount of time,
         // fallback to plaint <script> tag.
         setTimeout(() => {
           if (!scriptLoaded) {
-            console.warn(
-              'Failed to load app from service worker. Falling back to plain <script> tag.',
-            );
+            console.warn('Failed to load app from service worker. Falling back to plain <script> tag.');
             loadMainDartJs();
           }
         }, 4000);
@@ -90,32 +84,12 @@
       loadMainDartJs();
     }
   </script>
-
   <script defer src="/__/firebase/8.6.1/firebase-app.js"></script>
   <script defer src="/__/firebase/8.6.1/firebase-auth.js"></script>
   <script defer src="/__/firebase/8.6.1/firebase-firestore.js"></script>
   <script defer src="/__/firebase/8.6.1/firebase-analytics.js"></script>
   <script defer src="/__/firebase/init.js"></script>
   <!-- <script defer src="/__/firebase/init.js?useEmulator=true"></script> -->
-
-  <!-- <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
-
-  <script type="text/javascript">
-    firebase.initializeApp({
-      projectId: "tendon-loader",
-      measurementId: "G-0CWKSVKJGS",
-      messagingSenderId: "534221336745",
-      storageBucket: "tendon-loader.appspot.com",
-      authDomain: "tendon-loader.firebaseapp.com",
-      apiKey: "AIzaSyDDyoyhwZtACT9Y6yzeNFl1Ch6mU1SZ-pc",
-      appId: "1:534221336745:web:8893c7f4e44b9e959639b8",
-      databaseURL: "https://tendon-loader-default-rtdb.firebaseio.com",
-    });
-    firebase.analytics();
-  </script> -->
 </body>
 
 </html>
