--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="tendon_loader">
-  <link rel="apple-touch-icon" href="assets/images/app_logo.svg">
+  <link rel="apple-touch-icon" href="app_logo.svg">
   <title>Tendon Loader</title>
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.ico" />
@@ -18,7 +18,7 @@
   <!-- Static background -->
   <style>
     body {
-      background-image: url('assets/images/app_logo.svg');
+      background-image: url('app_logo.svg');
       background-size: 100vw 100vh;
     }
   </style>
@@ -83,15 +83,15 @@
       loadMainDartJs();
     }
   </script>
-  <!-- <script defer src="/__/firebase/8.6.1/firebase-app.js"></script>
+  <script defer src="/__/firebase/8.6.1/firebase-app.js"></script>
   <script defer src="/__/firebase/8.6.1/firebase-auth.js"></script>
   <script defer src="/__/firebase/8.6.1/firebase-firestore.js"></script>
   <script defer src="/__/firebase/8.6.1/firebase-analytics.js"></script>
-  <script defer src="/__/firebase/init.js"></script> -->
+  <!-- <script defer src="/__/firebase/init.js"></script> -->
 
-  <!-- <script defer src="/__/firebase/init.js?useEmulator=true"></script> -->
+  <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
@@ -109,7 +109,7 @@
     };
     firebase.initializeApp(firebaseConfig);
     firebase.analytics();
-  </script>
+  </script> -->
 </body>
 
 </html>
