update web portal

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,7 @@
     body {
       background-image: url('app_logo.svg');
       background-size: 100vw 100vh;
+      background-color: black;
     }
   </style>
 </head>
