--- a/tendon_loader/web/index.html
+++ b/tendon_loader/web/index.html
@@ -51,7 +51,7 @@
 
 <body>
   <noscript>
-    <p>Your browser does not support JavaScript, or its disabled.</p>
+    <p>Your browser does not support JavaScript, or disabled.</p>
   </noscript>
 
   <div id="loading">
